--- a/PythonTutorial/Notebook/TuplesandDictionary.ipynb
+++ b/PythonTutorial/Notebook/TuplesandDictionary.ipynb
@@ -23,6 +23,58 @@
     "      }\n",
     "print(dict1)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "3115e390",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "#using len() in dictionary\n",
+    "dict1={\"brand\":\"Ford\",\n",
+    "       \"model\":\"Mustang\",\n",
+    "       \"Year\":1976,\n",
+    "      }\n",
+    "print(len(dict1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "a7eb1bd9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "# len() function in tuple\n",
+    "\n",
+    "fruits= (\"apple\",\"banana\",\"cherry\",\"Mango\",\"banana\" )\n",
+    "print(len(fruits))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "285bf1fa",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
