--- a/PythonTutorial/Notebook/List in python.ipynb
+++ b/PythonTutorial/Notebook/List in python.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "ec69666c",
    "metadata": {},
    "outputs": [
@@ -15,13 +15,14 @@
     }
    ],
    "source": [
+    "#printing empty list\n",
     "Mylist=[]\n",
     "print(Mylist)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "cfbf7e61",
    "metadata": {},
    "outputs": [
@@ -34,13 +35,14 @@
     }
    ],
    "source": [
+    "#prinying list with elements\n",
     "n_list=[1,2,3,4,5,6,7]\n",
     "print(n_list)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "fd152b34",
    "metadata": {},
    "outputs": [
@@ -53,13 +55,14 @@
     }
    ],
    "source": [
+    "#printing list with strings\n",
     "Charlist=[\"Blue\",\"Red\",\"Black\",\"Yellow\"]\n",
     "print(Charlist)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "id": "f1953e48",
    "metadata": {},
    "outputs": [
@@ -72,13 +75,14 @@
     }
    ],
    "source": [
+    "#concating list with two different datatypes\n",
     "Concate=n_list + Charlist\n",
     "print(Concate)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "id": "c90ceded",
    "metadata": {},
    "outputs": [
@@ -88,39 +92,42 @@
        "11"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#Getting length of list with len function\n",
     "len(Concate)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "id": "9ac5e721",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "5"
+       "1"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "Concate[4]"
+    "#Getting element according to their index\n",
+    "Concate[4]\n",
+    "Concate[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "id": "3ebc0753",
    "metadata": {},
    "outputs": [
@@ -130,7 +137,7 @@
        "[1, 2, 3, 4, 5, 6]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
