--- a/PythonTutorial/Programs/Python Assignment.ipynb
+++ b/PythonTutorial/Programs/Python Assignment.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {
     "executionInfo": {
      "elapsed": 13,
@@ -23,21 +23,31 @@
     "#define function\n",
     "def multipleNum(n):\n",
     "        if(n%5==0 and n%7==0):\n",
-    "            print(\"number is multiple of 5 and 7\")"
+    "            print(\"number is multiple of 5 and 7\")\n",
+    "        else:\n",
+    "            print(\"number is not multiple of 5 and 7\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "number is not multiple of 5 and 7\n"
+     ]
+    }
+   ],
    "source": [
-    "multipleNum()"
+    "multipleNum(1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {
     "id": "bjSMveFX8LKK"
    },
@@ -46,66 +56,88 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "the unique values from 1st list is\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "append() takes exactly one argument (0 given)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-6-35645df7eef0>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     16\u001b[0m \u001b[0mlist1\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;36m10\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m20\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m10\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m30\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m40\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m40\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     17\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"the unique values from 1st list is\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 18\u001b[1;33m \u001b[0munique\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlist1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     19\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     20\u001b[0m \u001b[0mlist2\u001b[0m \u001b[1;33m=\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m2\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m3\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m4\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m3\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m3\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m5\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-6-35645df7eef0>\u001b[0m in \u001b[0;36munique\u001b[1;34m(list1)\u001b[0m\n\u001b[0;32m      8\u001b[0m         \u001b[1;31m# check if exists in unique_list or not\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[1;32min\u001b[0m \u001b[0munique_list\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 10\u001b[1;33m             \u001b[0munique_list\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     11\u001b[0m     \u001b[1;31m# print list\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     12\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0munique_list\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: append() takes exactly one argument (0 given)"
+      "Original List: [10, 20, 10, 30, 20, 40, 50]\n",
+      "List of unique Numbers : [40, 10, 50, 20, 30]\n"
      ]
     }
    ],
    "source": [
     "# Write a program/function to get distinct values in a list\n",
-    "def unique(list1):\n",
-    "    # initialize a null list\n",
-    "    unique_list = []\n",
-    "     \n",
-    "    for i in list1:\n",
-    "    # check if exists in unique_list or not\n",
-    "        if i not in unique_list:\n",
-    "            unique_list.append()\n",
-    "    # print list\n",
-    "    for i in unique_list:\n",
-    "        print(i)   \n",
-    "# driver code\n",
-    "list1 = [10, 20, 10, 30, 40, 40]\n",
-    "print(\"the unique values from 1st list is\")\n",
-    "unique(list1)\n",
-    " \n",
-    "list2 =[1, 2, 1, 1, 3, 4, 3, 3, 5]\n",
-    "print(\"\\nthe unique values from 2nd list is\")\n",
-    "unique(list2)"
+    "my_list=[10,20,10,30,20,40,50]\n",
+    "print(\"Original List:\",my_list)\n",
+    "my_unique=set(my_list)\n",
+    "my_unique1=list(my_unique)\n",
+    "print(\"List of unique Numbers :\",my_unique1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Write a program/function to count number of Sunday in a date range\n",
-    "import datetime\n",
-    "firstdate = date(2020, 1, 1)\n",
-    "seconddate = date(2021, 1, 1)\n"
+    "from datetime import  date"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "firstdate = date(2017, 1, 1)\n",
+    "seconddate= date(2017, 1, 31)\n",
+    "count = 0\n",
+    "for i in range(firstdate.toordinal(), seconddate.toordinal()):\n",
+    "    d = date.fromordinal(i)\n",
+    "    if (d.weekday() == 6):\n",
+    "        count += 1\n",
+    "print(count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from datetime import  date"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {
     "id": "5HflFzLR8j38"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Today: 2021-10-03\n",
+      "Last Monday: 2021-09-27\n",
+      "Coming Monday: 2021-10-04\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write a program/function to get previous and next Monday from a date"
+    "# Write a program/function to get previous and next Monday from a date\n",
+    "today = datetime.date.today()\n",
+    "last_monday = today - datetime.timedelta(days=today.weekday())\n",
+    "coming_monday = today + datetime.timedelta(days=-today.weekday(), weeks=1)\n",
+    "print(\"Today:\", today)\n",
+    "print(\"Last Monday:\", last_monday)\n",
+    "print(\"Coming Monday:\", coming_monday)"
    ]
   }
  ],
